2004-11-19 Alain Magloire

	Clear the confusion about sublist of stackframes.
	PR 78611

	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIStackFrame.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIThread.java
	* src/org/eclipse/cdt/debug/internal/model/CThread.java

2004-11-17 David Inglis
	
	Change debug target to use IBinaryObject instead of IBinaryExecutable
	
	* src/org/eclipse/cdt/debug/core/CDIDebugModel.java
	* src/org/eclipse/cdt/debug/core/ICDIDebugger.java
	* src/org/eclipse/cdt/debug/core/model/IExecFileInfo.java
	* src/org/eclipse/cdt/debug/internal/core/CDebugAdapter.java
	* src/org/eclipse/cdt/debug/internal/core/model/CDebugTarget.java
	
2004-11-16 Alain Magloire
	Optimize things by providing a new method
	ICDIRegisterGroup.hasRegisters();
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIRegisterGroup.java
	* src/org/eclipse/cdt/debug/internal/core/model/CRegisterGroup.java

2004-11-15 Mikhail Khodjaiants
	Fix for bug 78604: Disassembly causes Java exception when disassembling beyond fn(?).
	Added the "getAddressFactory" method to the "IDisassembly" interface.
	* IDisassembly.java
	* Disassembly.java

2004-11-15 Mikhail Khodjaiants
	Batch breakpoint updates in one job.
	* CBreakpointManager.java

2004-11-12 Mikhail Khodjaiants
	Apply the breakpoint's condition changes to the associated gdb breakpoint 
	only if there are differences.
	* CBreakpointManager.java

2004-11-12 Mikhail Khodjaiants
	Compare breakpoint source handles as pathes.
	* CDIDebugModel.java
  
2004-11-11 Alain Magloire
	Fix for PR 75000, from PalmSource
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIVariable.java

2004-11-10 Mikhail Khodjaiants
	Fix for bug 76340: CDT hogs Windows input loop when double clicking on a breakpoint.
	* InternalDebugCoreMessages.properties
	* CBreakpointManager.java

2004-11-09 Mikhail Khodjaiants
	Fix for bug 77275: Disassembly causes Java exception for fn's with 0 bytes fn prologues.
	* DisassemblyBlock.java

2004-11-09 Mikhail Khodjaiants